--- a/entradas_com/app/static/css/custom/event.css
+++ b/entradas_com/app/static/css/custom/event.css
@@ -1,6 +1,7 @@
 #purchase-button{
-    background-color: orange;
-    border: 2px solid orange;
+    background-color: rgb(255, 180, 2);
+    border: 2px solid rgb(255, 180, 2);
+    transition: border 0.5s ease;
     border-radius: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -8,10 +9,18 @@
     font-size: 22px;
     font-weight: 800;
     margin-bottom: 2em;
+    text-align: center;
+    text-decoration: none;
+
+
 }
 
-#fact-sheet > p {
-    font-weight: 800;
-    display: inline-block;
-    padding-right: 20px;
+.cinema-price{
+    float:right;
+    font-size:24px;
+    margin-top:4px;
+}
+
+strong {
+    margin-right:20px;
 }
