--- a/entradas_com/app/templates/event/event.html
+++ b/entradas_com/app/templates/event/event.html
@@ -92,33 +92,81 @@
             
         <!--Container for stuff below video-->
         <div class="container">
+            
+            <!--TITULO + DURACION + EDAD-->
             <h1>The revenant </h1>
-            <h4><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>156 min.<i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+</h4>
-            <hr style="border-width:2px;color:pink">
-            <button id="purchase-button" class="col-xs-12">Comprar entradas</button>
+            <h4>
+                <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>156 min.
+                <i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
+            </h4>
+            <hr>
+            <a id="purchase-button" class="col-xs-12" data-scroll href="#buy-pls">Comprar entradas</a>
             <h2>Información</h2>
-            <hr style="border-width:2px;color:pink">
+            <hr>
+            
+            <!--SINOPSIS-->
             <h3>Sinopsis</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis est ultrices, pretium ligula sit amet, varius dolor. Nulla eget erat vel ipsum fermentum sodales sit amet non dolor. Cras sed eleifend nisi, in sollicitudin leo. Pellentesque a egestas arcu, non elementum purus. Nunc at tempus arcu. Mauris lobortis mattis justo, in elementum quam lacinia ut. In ut velit faucibus, gravida libero sed, tempor ante. Integer imperdiet nisi in semper viverra. Praesent faucibus nisi sed sem cursus ultrices. In hac habitasse platea dictumst.</p>
+            
+            <!--INFO PELICULA-->
             <h3>Ficha técnica</h3>
-            <div id="fact-sheet">
-                <ul>
-                    <li class="left">Género:</li>
-                    <li class="right">genero aqui</li>
-                    <li class="left">Director:</li>
-                    <li class="right">director aqui</li>
-                    <li class="left">Duración:</li>
-                    <li class="right">duracion aqui</li>
-                    <li class="left">País</li>
-                    <li class="right"></li>
-                    <li class="left">Fecha de estreno:</li>
-                    <li class="right">reparto aqui</li>
-                    <li class="left">Reparto:</li>
-                    <li class="right">reparto aqui</li>
-                </ul>
+            <div style="display:inline-block">
+                <strong>Género:</strong><br>
+                <strong>Director:</strong><br>
+                <strong>Duración:</strong><br>
+                <strong>País:</strong><br>
+                <strong>Fecha de estreno:</strong><br>
+                <strong>Reparto:</strong><br>
             </div>
+            <div style="display:inline-block">
+                genero<br>
+                director<br>
+                duracion<br>
+                pais<br>
+                estreno</strong><br>
+                reparto<br>
+            </div>
+            
+            <!--LINKS CINES; COMPRA DE ENTRADAS-->
+            <h2 id="buy-pls">Comprar entradas</h2>
+            <hr>
+            <h5>Seleccione un cine:</h5>
+            <div class="list-group">
+                
+            <!-- iterar cines desde aqui, por links -->
+              <a href="#" class="list-group-item">
+                <div style="display:inline-block">
+                  <h4 class="list-group-item-heading">Cinesa Tres Aguas</h4>
+                  <p class="list-group-item-text">C/Arroyomolinos, 15</p>
+                </div>
+                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 7,60€</div>
+              </a>
+            <!-- fin iteracion -->
+                
+            </div>
+            
+            <!-- paginacion -->
+            <nav style="text-align:center; display:block; margin-top:10px">
+              <ul class="pagination pagination-lg">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="disabled"><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            
+            
         </div>
-
+        
         
         <!-- Footer -->
         <footer class="footer"> 
@@ -148,10 +196,11 @@
     <script src="{{ url_for('static', filename='js/login-signup.js') }}"></script>
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
     <script src="{{ url_for('static', filename='js/event-ytb-handler.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='js/smooth-scroll.min.js') }}"></script>
 
     <!--exec bg carousel-->
     <script>$('.carousel').carousel();</script>
+    <script>smoothScroll.init();</script>
         
 	</body>
 </html>
