--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -16,6 +16,7 @@
 
     <!-- uikit CSS -->
     <link href="{{ url_for('static', filename='css/uikit/uikit.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/uikit/uk-flex.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/components/datepicker.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/components/slideshow.min.css') }}" rel="stylesheet">
 
@@ -27,9 +28,8 @@
     <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom/search-cards.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom/search-results.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">\
+    <link href="{{ url_for('static', filename='css/custom/shop.css') }}" rel="stylesheet">
 
 </head>
 
@@ -114,80 +114,64 @@
         </ul>
     </div>
 
-    <!-- Filter bar -->
+    <!-- Shop process -->
 
-    <div data-uk-sticky id="filter-bar" class="container input-group">
-        <div class="input-group-btn">
-            <button type="button" class="btn btn-default dropdown-toggle filter-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-question fa-lg fa-fw" aria-hidden="true"></i> <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu filter-dropdown-menu">
-                <li><a onclick="dropdownFilter(0);"href="#"><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i> &nbsp; Filtro por localización</a></li>
-                <li><a onclick="dropdownFilter(1);"href="#"><i class="fa fa-calendar-o fa-fw" aria-hidden="true"></i> &nbsp; Filtro por fecha</a></li>
+    <form class="uk-form uk-form-horizontal" action="index.html" method="post">
+
+        <!-- Session date -->
+
+        <div class="uk-form-row">
+            <label class="uk-form-label" for="session-date">Selecciona tu método de pago</label>
+            <div class="uk-form-controls">
+                <input id="session-date" type="text" data-uk-datepicker="{format:'DD.MM.YYYY'}" placeholder="¿Qué sesión quieres?" aria-describedby="basic-addon1">
+            </div>
+        </div>
+
+        <!-- Seats selection -->
+
+        <label for="seat-select">Selecciona tu titio</label>
+        <ul id="seat-select" class="uk-grid" data-uk-grid-margin>
+            <li id="section-bl" onclick="selectSection(0);" class="seat-section side-section uk-width-1-5"> </li>
+            <li id="section-bm" onclick="selectSection(1);" class="seat-section mid-section uk-width-3-5">  </li>
+            <li id="section-br" onclick="selectSection(2);" class="seat-section side-section uk-width-1-5"> </li>
+            <li id="section-mm" onclick="selectSection(3);" class="seat-section mid-section uk-width-3-5">  </li>
+            <li id="section-fm" onclick="selectSection(4);" class="seat-section mid-section uk-width-3-5">  </li>
+            <li id="screen" class="uk-width-medium-1-1"></li>
+        </ul>
+
+        <!-- Payment -->
+
+        <fieldset>
+            <div class="uk-form-row">
+                <label class="uk-form-label" for="payment">Selecciona tu método de pago</label>
+                <div class="uk-form-controls">
+                    <input id="paypal-radio" type="radio" name="payment" value="">
+                    <label for="paypal-radio">PayPal</label>
+                    <input id="card-radio" type="radio" name="payment" value="">
+                    <label for="card-radio">Tarjeta de Crédito</label>
+                </div>
+            </div>
+
+            <legend>Datos de Tarjeta</legend>
+            <div class="uk-form-row"><input id="cardholder-input" class="uk-form-width-large" type="text" name="cardholder" placeholder="Nombre Apellidos"></div>
+            <div class="uk-form-row"><input id="cardnum-input" class="uk-form-width-large" type="text" name="cardnum" placeholder="1234 1234 1234 1234"></div>
+            <div class="uk-form-row"><input id="cardexp-input" class="uk-form-width-small" type="text" data-uk-datepicker="{format:'MM.YYYY'}" placeholder="Click para seleccionar" aria-describedby="basic-addon1"></div>
+            <div class="uk-form-row"><input id="cardsecret-input" class="uk-form-width-mini" type="text" name="cardnum" placeholder="123"></div>
+        </fieldset>
+
+        <!-- Pager -->
+
+        <nav>
+            <ul class="pager">
+                <li class="previous disabled"><a href="#"><span aria-hidden="true">&larr;</span> Paso anterior</a></li>
+                <li class="next"><a href="#">Paso siguiente <span aria-hidden="true">&rarr;</span></a></li>
             </ul>
-        </div>
-        <input id="filter-date" class="form-control filterbar filterbar-text" type="text" data-uk-datepicker="{format:'DD.MM.YYYY'}" placeholder="¿Para cuándo?">
-        <input id="filter-location" type="text" class="form-control filterbar filterbar-text" placeholder="¿Para dónde?" aria-label="filter-terms">
-        <div class="input-group-btn">
-            <button class="btn btn-default filter-btn" type="button"><span class="glyphicon glyphicon-align-left"></span></button>
-        </div>
-    </div>
+        </nav>
 
-    <!-- Cards -->
+        <!-- Submit -->
 
-    <div class="container">
-    {% if events %}
-    {% for i in range(8)  %}
 
-    <div class="col-sm-12 col-md-6 card" tabindex="-1">
-        <div class="media">
-            <div class="media-left">
-                <a href="#">
-                    <img class="media-object card-img" src="{{ events[i].omdb_poster }}" alt="#">
-                </a>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading card-body">{{ events[i].title }}</h4>
-                <p class="card-body">
-                    <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ events[i].duration }} min.
-                    <i class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
-                    <i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
-                    <i class="fa fa-money fa-fw" aria-hidden="true"></i>Desde {{events[i].price}}€
-                </p>
-                <p class="card-body">
-                    <a href="{{ url_for('event.event', id=42) }}" class="btn btn-warning" role="button">Información + Comprar entradas</a>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    {% endfor %}
-    {% endif %}
-    </div>
-
-    <!--Pagination-->
-
-    <nav style="text-align:center; display:block; margin-top:20px">
-      <ul class="pagination pagination-lg">
-        <li class="disabled">
-          <a href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li class="disabled">
-            <a href="#">1</a>
-        </li>
-        {% for page in range(2,4) %}
-        <li><a href="#">{{ page }}</a></li>
-        {% endfor %}
-
-        <li>
-          <a href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    </form>
 
     <!-- Footer -->
 
@@ -229,8 +213,8 @@
 
     <!-- own JavaScript -->
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/search-results.js') }}"></script>
     <script src="{{ url_for('static', filename='js/searchbar-transparent.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/shop.js') }}"></script>
 
 </body>
 
