FIX youtube video size; ADD placeholders

--- a/entradas_com/app/templates/event/event.html
+++ b/entradas_com/app/templates/event/event.html
@@ -86,7 +86,7 @@
                
         <!--Youtube video frame (IMPORTANT: CHECK YTB API TO EVENTUALLY SHOW/HIDE NAVBAR ON PAUSE/PLAY-->
         <!--https://developers.google.com/youtube/js_api_reference?csw=1#Requirements-->
-        <div class="embed-responsive embed-responsive-16by9">
+        <div>
             <div id="player"></div>
         </div>   
             
@@ -97,6 +97,7 @@
             <h1>The revenant </h1>
             <h4>
                 <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>156 min.
+                <i style="margin-left:50px"class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
                 <i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
             </h4>
             <hr>
@@ -136,12 +137,38 @@
             <!-- iterar cines desde aqui, por links -->
               <a href="#" class="list-group-item">
                 <div style="display:inline-block">
-                  <h4 class="list-group-item-heading">Cinesa Tres Aguas</h4>
-                  <p class="list-group-item-text">C/Arroyomolinos, 15</p>
+                  <h4 class="list-group-item-heading">Cinesco Tres Aguas</h4>
+                  <p class="list-group-item-text">C/Arroyomolinos, 15, Alcorcón</p>
                 </div>
                 <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 7,60€</div>
               </a>
             <!-- fin iteracion -->
+                
+            <!--placeholder shit-->
+              <a href="#" class="list-group-item">
+                <div style="display:inline-block">
+                  <h4 class="list-group-item-heading">CineBarrel La Matraz</h4>
+                  <p class="list-group-item-text">Avda. Jaime Fallón, Alcorcón</p>
+                </div>
+                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 9,20€</div>
+              </a>
+                
+              <a href="#" class="list-group-item">
+                <div style="display:inline-block">
+                  <h4 class="list-group-item-heading">Kinepolia Center</h4>
+                  <p class="list-group-item-text">Edificio Drumpft, Madrid</p>
+                </div>
+                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 9,60€</div>
+              </a>
+                
+              <a href="#" class="list-group-item">
+                <div style="display:inline-block">
+                  <h4 class="list-group-item-heading">Adarga Cines</h4>
+                  <p class="list-group-item-text">C.C. Parquesur, Leganés</p>
+                </div>
+                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 8,30€</div>
+              </a>
+                
                 
             </div>
             
