--- a/entradas_com/app/templates/event/event.html
+++ b/entradas_com/app/templates/event/event.html
@@ -94,11 +94,11 @@
         <div class="container">
             
             <!--TITULO + DURACION + EDAD-->
-            <h1>The revenant </h1>
+            <h1>{{ event.title }}</h1>
             <h4>
-                <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>156 min.
+                <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ event.duration }}
                 <i style="margin-left:50px"class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
-                <i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
+                <i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>{{ event.omdb_imdbRating }}
             </h4>
             <hr>
             <a id="purchase-button" class="col-xs-12" data-scroll href="#buy-pls">Comprar entradas</a>
@@ -107,7 +107,7 @@
             
             <!--SINOPSIS-->
             <h3>Sinopsis</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis est ultrices, pretium ligula sit amet, varius dolor. Nulla eget erat vel ipsum fermentum sodales sit amet non dolor. Cras sed eleifend nisi, in sollicitudin leo. Pellentesque a egestas arcu, non elementum purus. Nunc at tempus arcu. Mauris lobortis mattis justo, in elementum quam lacinia ut. In ut velit faucibus, gravida libero sed, tempor ante. Integer imperdiet nisi in semper viverra. Praesent faucibus nisi sed sem cursus ultrices. In hac habitasse platea dictumst.</p>
+            <p>{{ event.sinopsis }}</p>
             
             <!--INFO PELICULA-->
             <h3>Ficha técnica</h3>
@@ -123,7 +123,7 @@
                 genero<br>
                 director<br>
                 duracion<br>
-                pais<br>
+                {{ event.country.lower() }}<br>
                 estreno</strong><br>
                 reparto<br>
             </div>
@@ -135,17 +135,17 @@
             <div class="list-group">
                 
             <!-- iterar cines desde aqui, por links -->
-              <a href="#" class="list-group-item">
+              <a href="{{ url_for('purchase.purchase') }}" class="list-group-item">
                 <div style="display:inline-block">
                   <h4 class="list-group-item-heading">Cinesco Tres Aguas</h4>
                   <p class="list-group-item-text">C/Arroyomolinos, 15, Alcorcón</p>
                 </div>
-                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 7,60€</div>
+                <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; {{ event.price }}€</div>
               </a>
             <!-- fin iteracion -->
                 
             <!--placeholder shit-->
-              <a href="#" class="list-group-item">
+              <a href="{{ url_for('purchase.purchase') }}" class="list-group-item">
                 <div style="display:inline-block">
                   <h4 class="list-group-item-heading">CineBarrel La Matraz</h4>
                   <p class="list-group-item-text">Avda. Jaime Fallón, Alcorcón</p>
@@ -153,7 +153,7 @@
                 <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 9,20€</div>
               </a>
                 
-              <a href="#" class="list-group-item">
+              <a href="{{ url_for('purchase.purchase') }}" class="list-group-item">
                 <div style="display:inline-block">
                   <h4 class="list-group-item-heading">Kinepolia Center</h4>
                   <p class="list-group-item-text">Edificio Drumpft, Madrid</p>
@@ -161,7 +161,7 @@
                 <div class="cinema-price"><i class="fa fa-money fa-sm fa-fw"></i>&nbsp; 9,60€</div>
               </a>
                 
-              <a href="#" class="list-group-item">
+              <a href="{{ url_for('purchase.purchase') }}" class="list-group-item">
                 <div style="display:inline-block">
                   <h4 class="list-group-item-heading">Adarga Cines</h4>
                   <p class="list-group-item-text">C.C. Parquesur, Leganés</p>
