--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -28,7 +28,7 @@
     <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">\
+    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/custom/shop.css') }}" rel="stylesheet">
 
 </head>
@@ -77,32 +77,6 @@
 
         </div>
     </nav>
-
-    <!-- Search bar -->
-
-    <form id="search-bar" action="{{ url_for('search.search') }}" type="search" method="post" name="Search">
-        <div class="search-container container input-group">
-            <div class="input-group-btn">
-                <button id="dropbtn" type="button" class="btn btn-default dropdown-toggle searchbtn drop-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-question fa-lg fa-fw" aria-hidden="true"></i> <span class="caret"></span></button>
-                <ul class="dropdown-menu search-dropdown-menu">
-                    <li><a href="#" onclick="dropdown(1);"><i class="fa fa-ticket fa-lg fa-fw"></i> Cine </a></li>
-                    <li><a href="#" onclick="dropdown(2);"><img src="{{ url_for('static', filename='img/theater.png') }}" style="width:18px"> &nbsp; Teatro </a></li>
-                    <li><a href="#" onclick="dropdown(3);"><i class="fa fa-music fa-lg fa-fw"></i> Conciertos </a></li>
-                    <li><a href="#" onclick="dropdown(4);"><i class="fa fa-university fa-lg fa-fw"></i> Exposiciones/Museos </a></li>
-                    <li><a href="#" onclick="dropdown(5);"><i class="fa fa-futbol-o fa-lg fa-fw"></i> Deportes </a></li>
-                    <li><a href="#" onclick="dropdown(6);"><i class="fa fa-magic fa-lg fa-fw" aria-hidden="true"></i> Shows/Espectáculos </a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#" onclick="dropdown(0);"><i class="fa fa-globe fa-lg fa-fw"></i> Todas las categorías</a></li>
-                </ul>
-            </div>
-            <input id="search-input-text" name="query" type="text" class="form-control searchbar searchbar-text search-input-text" placeholder="Busca espectáculos aquí" aria-label="search-terms" onkeydown="setDefaultDrop()" method="post">
-            <div class="input-group-btn">
-                <button id="searchnow" class="btn btn-default searchbtn sendsearchbtn search-now" type="Submit" href="{{ url_for('search.search') }}">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
-        </div>
-    </form>
 
     <!-- Header Carousel -->
 
