--- a/entradas_com/app/static/css/custom/shop.css
+++ b/entradas_com/app/static/css/custom/shop.css
@@ -1,24 +1,50 @@
+#header-carousel {
+    height: 30%;
+}
+
+.search-container{
+    top:15%;
+    width: 90%;
+}
+
+#purchase-form {
+    padding: 10px;
+}
+
 .seat-section {
+    border-radius: 4px;
     background-color: rgb(241,241,241);
 }
 
 .side-section {
-    height: 4em;
+    height: 16em;
 }
 
 #section-bm {
-    height: 2em;
+    height: 16em;
 }
 
 #section-mm {
-    height: 4em;
+    height: 10em;
 }
 
 #section-fm {
-    height: 1em;
+    height: 4em;
 }
 
 #screen {
-    height: 1em;
+    border-radius: 4px;
+    height: 4em;
     background-color:  rgb(221,221,221);
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+}
+
+.available-section {
+    background-color: RGBA(0, 150, 136, 1);
+}
+
+.selected-section {
+    background-color: rgb(255, 180, 2);
 }
