--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -91,50 +91,72 @@
     <!-- Shop process -->
 
     <div id="purchase-container" class="container">
-        <form id="purchase-form" class="uk-form uk-form-horizontal" action="index.html" method="post">
+        <form id="purchase-form" class="uk-form uk-form-stacked" action="index.html" method="post">
 
             <!-- Session date -->
 
-            <div class="uk-form-row">
-                <label class="uk-form-label" for="session-date">Selecciona tu sesión</label>
-                <div class="uk-form-controls">
-                    <input id="session-date" type="text" data-uk-datepicker="{format:'DD/MM/YYYY'}" placeholder="¿Qué día?" aria-describedby="basic-addon1">
+            <fieldset>
+                <legend>Selecciona tu sesión</legend>
+                <div class="uk-form-row">
+                    <label class="uk-form-label" for="">Selecciona el día</label>
+                    <div class="uk-form-controls">
+                        <input id="session-date" type="text" data-uk-datepicker="{format:'DD/MM/YYYY'}" placeholder="¿Qué día?" aria-describedby="basic-addon1">
+                    </div>
                 </div>
-            </div>
+            </fieldset>
 
             <!-- Seats selection -->
 
-            <label for="seat-select">Selecciona tu sitio</label>
-            <div class="uk-container-center uk-width-3-5">
-                <ul id="seat-select" class="uk-grid uk-grid-medium" data-uk-grid-margin>
-                    <li id="section-bl" onclick="selectSection(0);" class="seat-section available-section side-section uk-width-1-6"> </li>
-                    <li id="section-bm" onclick="selectSection(1);" class="seat-section available-section mid-section uk-container-center uk-width-3-5">  </li>
-                    <li id="section-br" onclick="selectSection(2);" class="seat-section side-section uk-width-1-6"> </li>
-                    <li id="section-mm" onclick="selectSection(3);" class="seat-section available-section mid-section uk-container-center uk-width-3-5">  </li>
-                    <li id="section-fm" onclick="selectSection(4);" class="seat-section mid-section uk-container-center uk-width-3-5">  </li>
-                    <li id="screen" class="uk-width-medium-1-1">Pantalla/escenario
-                    </li>
-                </ul>
-            </div>
+            <fieldset>
+                <legend>Selecciona tu sitio</legend>
+                <div class="uk-container-center uk-width-3-5">
+                    <ul id="seat-select" class="uk-grid uk-grid-medium" data-uk-grid-margin>
+                        <li id="section-bl" onclick="selectSection(0);" class="seat-section available-section side-section uk-width-1-6"> </li>
+                        <li id="section-bm" onclick="selectSection(1);" class="seat-section available-section mid-section uk-container-center uk-width-3-5">  </li>
+                        <li id="section-br" onclick="selectSection(2);" class="seat-section side-section uk-width-1-6"> </li>
+                        <li id="section-mm" onclick="selectSection(3);" class="seat-section available-section mid-section uk-container-center uk-width-3-5">  </li>
+                        <li id="section-fm" onclick="selectSection(4);" class="seat-section mid-section uk-container-center uk-width-3-5">  </li>
+                        <li id="screen" class="uk-width-medium-1-1">Pantalla/escenario
+                        </li>
+                    </ul>
+                </div>
+            </fieldset>
 
             <!-- Payment -->
 
             <fieldset>
-                <div class="uk-form-row">
-                    <label class="uk-form-label" for="payment">Selecciona tu método de pago</label>
-                    <div class="uk-form-controls">
-                        <input id="paypal-radio" type="radio" name="payment" value="">
-                        <label for="paypal-radio">PayPal</label>
-                        <input id="card-radio" type="radio" name="payment" value="">
-                        <label for="card-radio">Tarjeta de Crédito</label>
+                <legend>¡Sólo queda pagar!</legend>
+                <ul class="uk-tab uk-tab-bottom" data-uk-tab>
+                    <li><a href="#" onclick="payWithPal();">Paypal</a></li>
+                    <li><a href="#" onclick="payWithCard();">Credit Card</a></li>
+                </ul>
+
+                <div id="card-info" class="payment-option">
+                    <div class="uk-form-row card-input">
+                        <label class="uk-form-label" for="">Cardholder</label>
+                        <div class="uk-form-controls">
+                            <input id="cardholder-input" class="uk-form-width-large" type="text" name="cardholder" placeholder="Nombre Apellidos">
+                        </div>
+                    </div>
+                    <div class="uk-form-row card-input">
+                        <label class="uk-form-label" for="">Card Number</label>
+                        <div class="uk-form-controls">
+                            <input id="cardnum-input" class="uk-form-width-large" type="text" name="cardnum" placeholder="1234 1234 1234 1234">
+                        </div>
+                    </div>
+                    <div class="uk-form-row card-input">
+                        <label class="uk-form-label" for="">Expiration date</label>
+                        <div class="uk-form-controls">
+                            <input id="cardexp-input" class="uk-form-width-small" type="text" data-uk-datepicker="{format:'MM.YYYY', minDate: 0}" placeholder="Click para seleccionar" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="uk-form-row card-input">
+                        <label class="uk-form-label" for="">Secret Number</label>
+                        <div class="uk-form-controls">
+                            <input id="cardsecret-input" class="uk-form-width-mini" type="text" name="cardnum" placeholder="123">
+                        </div>
                     </div>
                 </div>
-
-                <legend>Datos de Tarjeta</legend>
-                <div class="uk-form-row"><input id="cardholder-input" class="uk-form-width-large" type="text" name="cardholder" placeholder="Nombre Apellidos"></div>
-                <div class="uk-form-row"><input id="cardnum-input" class="uk-form-width-large" type="text" name="cardnum" placeholder="1234 1234 1234 1234"></div>
-                <div class="uk-form-row"><input id="cardexp-input" class="uk-form-width-small" type="text" data-uk-datepicker="{format:'MM.YYYY', minDate: 0}" placeholder="Click para seleccionar" aria-describedby="basic-addon1"></div>
-                <div class="uk-form-row"><input id="cardsecret-input" class="uk-form-width-mini" type="text" name="cardnum" placeholder="123"></div>
             </fieldset>
 
             <!-- Pager -->
