--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -126,8 +126,16 @@
             <h2>3. Confirmación y pago</h2>
             <hr>
             <h4>Por favor, revise su compra y seleccione una forma de pago:</h4>
+            <div class="col-xs-12 list-group">
+                <div class="list-group-item">
+                    <h2>Titulo de evento</h2>
+                    <h4>información adicional</h4>
+                    <h3><strong>TOTAL:</strong></h3>
+                </div>
+                
+            </div>
             <div class="col-xs-12 col-sm-8">
-                <h3>Tarjeta de débito o crédito</h3>
+                <h2>Tarjeta de débito o crédito</h2>
                 <hr>
                 <div id="shop-mail-div" class="form-group has-feedback col-xs-12">
                     <label for="email">Email:</label>
@@ -160,11 +168,11 @@
             </div>
 
             <div class="col-xs-12 col-sm-4">
-                <h3>PayPal</h3>
+                <h2>PayPal</h2>
                 <hr>
                 <div  style="text-align:center">
-                    <a href=""><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" alt="Check out with PayPal"/></a>
-                    <img style="width:200px;margin-top:20px;"src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppppcmcvdam.png" alt="Pay with PayPal, PayPal Credit or any major credit card" />
+                    <a href="#"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" alt="Check out with PayPal"/></a>
+                    <img style="width:230px;margin-top:20px;"src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppppcmcvdam.png" alt="Pay with PayPal, PayPal Credit or any major credit card" />
                 </div>
             </div>
             <!-- Submit -->
