--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -127,7 +127,7 @@
             <hr>
             <h4>Por favor, revise su compra y seleccione una forma de pago:</h4>
             <div class="col-xs-12 list-group">
-                <div class="list-group-item">
+                <div class="list-group-item disabled">
                     <h2>Titulo de evento</h2>
                     <h4>información adicional</h4>
                     <h3><strong>TOTAL:</strong></h3>
