minor shop changes

--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -95,7 +95,7 @@
 
             <!-- Session date -->
 
-            <h1 style="margin-top:1em"><i class="fa fa-child fa-fw" aria-hidden="true"></i>Ya casi está!</h1>
+            <h1 style="margin-top:20px"><i class="fa fa-child fa-fw" aria-hidden="true"></i>Ya casi está!</h1>
             <h3>Complete su compra en tres pasos:</h3>
             <!-- Session date -->
             <h2>1. Selecciona tu sesión</h2>
@@ -105,9 +105,9 @@
                 <input id="session-date" type="text" data-uk-datepicker="{format:'DD.MM.YYYY'}" placeholder="¿Qué sesión quieres?" aria-describedby="basic-addon1">
             </div>
             <!-- Seats selection -->
-            <h2 style="margin-top:1em">2. No te quedes sin tu sitio!</h2>
+            <h2 style="margin-top:1em">2. Selecciona tus butacas</h2>
             <hr>
-            <h4>Por favor, elija las butacas que desee:</h4>
+            <h4>Por favor, elija la sección de butacas y posteriormente los asientos que desee:</h4>
             <fieldset>
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <ul id="seat-select" class="uk-grid uk-grid-medium" data-uk-grid-margin>
@@ -156,7 +156,7 @@
                     <span id="inputSuccess5Status" class="sr-only">(success)</span>
                 </div>
                 <div id="shop-crc-div" class="form-group has-feedback col-xs-6">
-                    <label for="pwd">CRC</label>
+                    <label for="pwd">CRC<i style="padding-left:5px"class="fa fa-question-circle" aria-hidden="true"></i></label>
                     <input name="password" type="password" class="form-control" id="login-pwd" onchange="login(1, this.id)" aria-describedby="inputSuccess5Status" required>
                     <span id="login-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                     <span id="inputSuccess5Status" class="sr-only">(success)</span>
