--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -144,7 +144,7 @@
         <div class="media">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object card-img" src="{{ event.omdb_poster }}" alt="#">
+                    <img class="media-object card-img" src="http://img.omdbapi.com/?i={{ event.imdb }}&apikey=b7845ea1" alt="#">
                 </a>
             </div>
             <div class="media-body">
