--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -149,7 +149,7 @@
                     <span id="shop-card-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                     <span id="inputSuccess1Status" class="sr-only">(success)</span>
                 </div>
-                <div id="shop-month-div" class="form-group has-feedback col-xs-5">
+                <div id="shop-month-div" class="form-group has-feedback col-xs-4">
                     <label for="shop">Mes</label>
                     <input name="shop-month" min="1" max="12" type="text" class="form-control" id="shop-month" aria-describedby="inputSuccess2Status" required onchange="cardcheck(2, self)" placeholder="formato: mm">
                     <span id="shop-month-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
@@ -161,13 +161,13 @@
                     <span id="shop-year-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                     <span id="inputSuccess3Status" class="sr-only">(success)</span>
                 </div>
-                <div id="shop-crc-div" class="form-group has-feedback col-xs-2">
+                <div id="shop-crc-div" class="form-group has-feedback col-xs-3">
                     <label for="pwd">CVV<a data-toggle="tooltip" title="CVV: dígitos de seguridad en la parte posterior de tu tarjeta de débito/crédito"<i style="padding-left:5px"class="fa fa-question-circle" aria-hidden="true"></i></label></a>
                     <input name="shop-crc" type="text" min="100" max="999" class="form-control" id="shop-crc" aria-describedby="inputSuccess4Status" required onchange="cardcheck(4, self)">
                     <span id="shop-crc-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                     <span id="inputSuccess4Status" class="sr-only">(success)</span>
                 </div>
-                <div class="col-xs-12" style="padding-top:20px">
+                <div class="col-xs-12" style="padding-top:20px;padding-bottom:20px;">
                 <button id="shop-form-btn" type="Submit" class="btn btn-success col-xs-12">
                     <span class="glyphicon glyphicon-log-in"></span> Proceed to checkout
                 </button>
